--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -97,7 +97,7 @@ linter:
     leading_newlines_in_multiline_strings: true
     library_names: true
     library_prefixes: true
-    library_private_types_in_public_api: true
+    library_private_types_in_public_api: false
     lines_longer_than_80_chars: false
     list_remove_unrelated_type: true
     literal_only_boolean_expressions: true
@@ -153,7 +153,7 @@ linter:
     prefer_is_not_empty: true
     prefer_is_not_operator: true
     prefer_iterable_whereType: true
-    prefer_mixin: true
+    prefer_mixin: false
     prefer_null_aware_method_calls: true
     prefer_null_aware_operators: true
     prefer_relative_imports: true
