v2 file structure updated + go_router

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -170,7 +170,7 @@ linter:
     sized_box_shrink_expand: true
     slash_for_doc_comments: false
     sort_child_properties_last: true
-    sort_constructors_first: true
+    sort_constructors_first: false
     sort_pub_dependencies: true
     sort_unnamed_constructors_first: true
     test_types_in_equals: true
