--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,16 +18,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   dio: ^4.0.4
   easy_localization: ^3.0.0
   flutter:
     sdk: flutter
   flutter_form_builder: ^7.0.0
+  font_awesome_flutter: ^9.2.0
   form_builder_validators: ^7.0.0
+  go_router: ^3.0.4
   google_fonts: ^2.3.1
   hooks_riverpod: ^1.0.3
   introduction_screen: ^2.1.0
@@ -47,4 +49,4 @@ flutter:
   assets:
     - assets/languages/
     - assets/images/
-    - assets/google_fonts/
+    - assets/fonts/
