--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_form_builder: ^7.0.0
+  fluttertoast: ^8.0.8
   font_awesome_flutter: ^9.2.0
   form_builder_validators: ^7.0.0
   go_router: ^3.0.4
