--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,18 +24,18 @@ dependencies:
   cupertino_icons: ^1.0.4
   dio: ^4.0.4
   easy_localization: ^3.0.0
+  flex_color_scheme: ^5.0.1
   flutter:
     sdk: flutter
   flutter_form_builder: ^7.0.0
   fluttertoast: ^8.0.8
-  font_awesome_flutter: ^9.2.0
-  form_builder_validators: ^7.0.0
+  font_awesome_flutter: ^10.1.0
+  form_builder_validators: ^8.1.1
   go_router: ^3.0.4
-  google_fonts: ^2.3.1
-  hooks_riverpod: ^1.0.3
-  introduction_screen: ^2.1.0
-  json_annotation: ^4.4.0
-  permission_handler: ^8.2.5
+  google_fonts: ^3.0.1
+  hooks_riverpod: ^1.0.4
+  introduction_screen: ^3.0.2
+  permission_handler: ^9.2.0
   shared_preferences: ^2.0.8
 
 dev_dependencies:
